--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,11 @@ jobs:
   # test action works running from the graph
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        runningBranch: [bcc, kind, microshift]
     steps:
     - uses: actions/checkout@v3
     - uses: ./
+      with:
+        runningBranch: ${{ matrix.runningBranch }}
