--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   # unit tests
-  units:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: npm ci
-    - run: npm test
+  # units:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - uses: actions/checkout@v3
+  #  - run: npm ci
+  #  - run: npm test
 
   # test action works running from the graph
   test_bcc:
@@ -41,6 +41,9 @@ jobs:
         docker ps -a
         kind get kubeconfig --name=kind
         kubectl get pods
+        docker pull nginx
+        kind load docker-image nginx
+        kubectl get po --namespace=monitoring
 
   # test action works running from the graph
   test_microshift:
