--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.0",
