Add microshift action (take 2)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,8 @@ on:
   pull_request:
   push:
     branches:
-      # - main
-      # - 'releases/*'
-      - add-microshift
+      - main
+      - 'releases/*'
 
 jobs:
   # unit tests
