--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,7 +1,7 @@
 name: Scheduled build
-on:
+on: # yamllint disable-line rule:truthy
   schedule:
-    - cron: "30 8 * * *"
+    - cron: 30 8 * * *
 
 jobs:
   test:
