--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,10 +1,12 @@
 name: Pull request
 
-on:
+on: # yamllint disable-line rule:truthy
   pull_request:
     banches:
       - main
 
 jobs:
+  yamllint:
+    uses: ./.github/workflows/yamllint.yml
   test:
     uses: ./.github/workflows/test.yml
