fix for kubeconfig existing issue on kepler model server CI
Signed-off-by: Sam Yuan <yy19902439@126.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,3 +10,5 @@ jobs:
     uses: ./.github/workflows/yamllint.yml
   test:
     uses: ./.github/workflows/test.yml
+  edge:
+    uses: ./.github/workflows/testEdge.yml
