[core] support customer kubeconfig
Signed-off-by: Sam Yuan <yy19902439@126.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,6 +69,7 @@ jobs:
           prometheus_operator_version: v0.12.0
           grafana_enable: ${{matrix.GRAFANA_ENABLE}}
           tekton_enable: ${{matrix.TEKTON_ENABLE}}
+          kubeconfig_root_dir: /tmp/kubeconfig
       - name: verify
         run: |
           ./verify.sh cluster
